fix: replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- BeanUtil.java: unify two-stage instantiation (newInstance() fallback to
  getDeclaredConstructor()) into single getDeclaredConstructor().newInstance() path
- TestTemplateHelper.java: replace clazz.newInstance() with
  clazz.getDeclaredConstructor().newInstance()
- Eliminates Java 9+ deprecation warnings, behavior remains equivalent